--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,12 @@ button.cta{cursor:pointer}
     <nav class="menu"><a href="index.html" class="">Home</a><a href="products.html" class="">Products</a><a href="customers.html" class="">Customer Success</a><a href="contact.html" class="active">Contact</a></nav>
   </div>
 </div>
-
   
 <div class="container section">
   <div class="kicker">Let’s talk</div>
   <h2>Contact Us</h2>
-  <p class="lead">Have a question about machines, service, or beans? Tell us a bit about yourself—we’ll follow up within one business day.</p>
+  <p class="lead">Have a question about machines, service, or beans? Tell us a bit about yourself and we’ll get back to you right away.</p>
+  
   <form id="contactForm" onsubmit="event.preventDefault(); handleSubmit();">
     <div class="notice">Submissions are sent to Power Automate. (You can replace FLOW_URL in the HTML with your own Flow trigger URL.)</div>
     <input type="text" name="firstName" placeholder="First name" required/>
