--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@ async function handleSubmit(){
   };
 
   try {
-    if (!FLOW_URL || FLOW_URL.includes("REPLACE_WITH_YOUR_FLOW_TRIGGER_URL")) throw new Error("No Flow URL set");
+    if (!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
     const res = await fetch(FLOW_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
@@ -150,7 +150,7 @@ async function handleSubmit(){
 
   
 <script>
-const FLOW_URL = "https://prod-XX.westus.logic.azure.com:443/workflows/REPLACE_WITH_YOUR_FLOW_TRIGGER_URL";
+const FLOW_URL = "hhttps://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1";
 
 async function handleSubmit(){
   const form = document.getElementById('contactForm');
@@ -167,7 +167,7 @@ async function handleSubmit(){
   };
 
   try {
-    if (!FLOW_URL || FLOW_URL.includes("REPLACE_WITH_YOUR_FLOW_TRIGGER_URL")) throw new Error("No Flow URL set");
+    if (!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
     const res = await fetch(FLOW_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
