--- a/index.html
+++ b/index.html
@@ -8,57 +8,65 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml"/>
   <style>
 :root{
-  --bg:#0F0A08;
-  --surface:#1C1411;
-  --card:#241A16;
-  --text:#F4EDE8;
-  --muted:#CBBFBA;
-  --brand:#C08A59;
-  --accent:#7F5539;
+  --bg:#0f0a08;
+  --surface:#17110e;
+  --card:#211813;
+  --text:#f5efe9;
+  --muted:#cbbfba;
+  --brand:#c08a59;
+  --line:rgba(255,255,255,.08);
 }
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;color:var(--text);background:var(--bg);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;line-height:1.55}
+html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;line-height:1.55}
 a{color:var(--brand);text-decoration:none}
 a:hover{text-decoration:underline}
-.container{max-width:1100px;margin:0 auto;padding:0 20px}
-.nav{position:sticky;top:0;z-index:20;background:rgba(15,10,8,.8);backdrop-filter:saturate(120%) blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
-.nav .row{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
-.brand{display:flex;gap:12px;align-items:center}
-.brand img{height:32px}
-.menu{display:flex;gap:18px;align-items:center}
-.menu a{padding:8px 10px;border-radius:10px}
+.container{max-width:1180px;margin:0 auto;padding:0 22px}
+.nav{position:sticky;top:0;z-index:30;background:rgba(15,10,8,.75);backdrop-filter:blur(10px);border-bottom:1px solid var(--line)}
+.nav .row{display:flex;gap:16px;align-items:center;justify-content:space-between;padding:12px 0}
+.brand{display:flex;gap:10px;align-items:center}
+.brand img{height:34px}
+.menu{display:flex;gap:14px}
+.menu a{padding:8px 12px;border-radius:10px}
 .menu a.active,.menu a:hover{background:rgba(255,255,255,.06)}
 .hero{position:relative}
-.hero img{width:100%;height:54vh;object-fit:cover;border-bottom:1px solid rgba(255,255,255,.08);}
-.hero .overlay{position:absolute;inset:0;display:grid;place-items:center;text-align:center;background:linear-gradient(transparent,rgba(15,10,8,.4),rgba(15,10,8,.9))}
-h1{font-size:44px;margin:0 0 10px}
+.hero img{width:100%;height:56vh;object-fit:cover;border-bottom:1px solid var(--line)}
+.hero .overlay{position:absolute;inset:0;display:grid;place-items:center;text-align:center;background:linear-gradient(transparent,rgba(15,10,8,.35),rgba(15,10,8,.92))}
+h1{font-size:46px;margin:0 0 8px}
 .lead{font-size:18px;color:var(--muted);max-width:900px;margin:0 auto}
-.grid{display:grid;gap:20px}
-.cards{grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
-.card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:16px;overflow:hidden;box-shadow:0 8px 30px rgba(0,0,0,.25)}
-.card .thumb{aspect-ratio:16/9;background:#000;display:block;width:100%}
-.card .pad{padding:16px}
-.badge{display:inline-block;padding:4px 10px;border-radius:999px;background:rgba(192,138,89,.15);color:#e9cfb8;border:1px solid rgba(192,138,89,.35);font-size:12px}
-.footer{margin-top:64px;border-top:1px solid rgba(255,255,255,.06);padding:30px 0;color:var(--muted);background:var(--surface)}
 .section{padding:36px 0}
-.section h2{font-size:28px;margin:0 0 10px}
 .kicker{color:var(--brand);text-transform:uppercase;letter-spacing:.12em;font-size:12px;margin-bottom:6px}
-.product-group{margin:28px 0}
-.product-item{display:grid;grid-template-columns:160px 1fr;gap:16px;align-items:center;margin:12px 0;padding:14px;border:1px solid rgba(255,255,255,.06);border-radius:14px;background:rgba(255,255,255,.02)}
-.product-item img{width:160px;height:120px;object-fit:cover;border-radius:12px;background:#000}
-.table{width:100%;border-collapse:collapse;margin-top:10px}
-.table th,.table td{border-bottom:1px solid rgba(255,255,255,.08);padding:10px;text-align:left}
-.cta{display:inline-block;padding:12px 18px;border-radius:12px;background:var(--brand);color:#160E0B;font-weight:700;border:1px solid rgba(255,255,255,.12)}
-.cta:hover{filter:brightness(1.05)}
-form{display:grid;gap:12px;max-width:520px}
-input,select,textarea{background:#130D0A;color:var(--text);border:1px solid rgba(255,255,255,.08);padding:12px;border-radius:10px;font-size:15px}
+.grid{display:grid;gap:20px}
+.cards{grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+.card{background:var(--card);border:1px solid var(--line);border-radius:18px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.28)}
+.card .thumb{width:100%;aspect-ratio:16/9;object-fit:cover;display:block}
+.card .pad{padding:16px}
+.badge{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(192,138,89,.16);color:#efd9c4;border:1px solid rgba(192,138,89,.35);font-size:12px}
+.table{width:100%;border-collapse:collapse}
+.table th,.table td{border-bottom:1px solid var(--line);padding:8px;text-align:left}
+.cta{display:inline-block;padding:12px 16px;border-radius:12px;background:var(--brand);color:#160e0b;font-weight:800;border:1px solid var(--line)}
+.footer{margin-top:56px;border-top:1px solid var(--line);padding:28px 0;color:var(--muted);background:var(--surface)}
+/* Accordion (products) */
+.accordion-controls{display:flex;gap:10px;align-items:center;margin:8px 0 18px}
+.acc-btn{width:100%;text-align:left;display:flex;justify-content:space-between;align-items:center;padding:16px 18px;border-radius:14px;background:rgba(255,255,255,.04);border:1px solid var(--line);font-weight:800;font-size:17px;color:inherit;box-shadow:0 6px 20px rgba(0,0,0,.25)}
+.acc-btn:hover{background:rgba(255,255,255,.06)}
+.acc-btn .chev{transition:transform .18s ease}
+.acc-panel{display:none;padding:12px 0 4px}
+.acc-panel.open{display:block}
+/* Product internals */
+.product-meta{display:flex;gap:12px;flex-wrap:wrap;margin:8px 0}
+.pill{padding:6px 10px;border:1px solid var(--line);border-radius:999px;color:var(--muted);font-size:12px}
+.product-body{display:grid;grid-template-columns:1fr 1fr;gap:20px}
+.product-body h4{margin:0 0 6px 0}
+ul.feats{margin:8px 0 0 18px}
+.specs{width:100%;border-collapse:collapse}
+.specs th,.specs td{border-bottom:1px dashed var(--line);padding:8px 10px;text-align:left;font-size:14px}
+.specs th{width:42%;color:var(--muted);font-weight:600}
+.card-footer{display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap;margin-top:12px}
+.price{font-weight:800;font-size:16px}
+input,select,textarea{background:#130d0a;color:var(--text);border:1px solid var(--line);padding:12px;border-radius:10px;font-size:15px}
 button{all:unset}
 button.cta{cursor:pointer}
-.notice{padding:12px 14px;border:1px dashed rgba(255,255,255,.2);border-radius:10px;background:rgba(255,255,255,.03);font-size:14px;color:var(--muted)}
-@media (max-width:720px){
-  .product-item{grid-template-columns:1fr}
-  .hero img{height:40vh}
-}
+@media (max-width:860px){.product-body{grid-template-columns:1fr}.hero img{height:44vh}}
 </style>
 </head>
 <body>
@@ -74,10 +82,10 @@ button.cta{cursor:pointer}
 
   
 <div class="hero">
-  <img src="https://images.pexels.com/photos/324028/pexels-photo-324028.jpeg?cs=srgb&fm=jpg&w=2000" alt="Coffee beans and machines collage"/>
+  <img src="https://images.pexels.com/photos/324028/pexels-photo-324028.jpeg?cs=srgb&fm=jpg&w=2000" alt="Barista pulling espresso"/>
   <div class="overlay">
     <div>
-      <h1>Brew Excellence. At Scale.</h1>
+      <h1>Brew excellence. At scale.</h1>
       <p class="lead">Welcome to Contoso Coffee Experience premium coffee machines and supplies that are eco-friendly. Presentation Overview Introducing Contoso Coffee Brand Contoso Coffee is a premium coffee brand committed to delivering the highest quality coffee experience. We believe in innovation, sustainability, and social responsibility. Product Range Our product range includes premium coffee machines and supplies that are designed to deliver the perfect coffee experience. Our products are easy to use, efficient and sustainable. Commitment to Sustainability At Contoso Coffee, we are committed to reducing our environmental impact and promoting sustainable practices. We strive to minimize waste and reduce our carbon footprint in everything we do. Our Values and Mission Mission Statement Our mission at Contoso Coffee is to provide high-quality coffee machines and supplies while promoting sustainability.</p>
       <div style="margin-top:18px"><a class="cta" href="products.html">Explore Products</a></div>
     </div>
@@ -85,50 +93,21 @@ button.cta{cursor:pointer}
 </div>
 <div class="container section">
   <div class="kicker">Why Contoso</div>
-  <h2>Machines, beans, and service that just work.</h2>
+  <h2>Machines, beans, and service that just work</h2>
   <div class="grid cards">
-    <div class="card">
-      <img class="thumb" src="https://images.pexels.com/photos/28272182/pexels-photo-28272182.jpeg?cs=srgb&fm=jpg&w=1600" alt="Products"/>
-      <div class="pad">
-        <div class="badge">Portfolio</div>
-        <h3>Commercial & Consumer</h3>
-        <p>From café‑grade super‑automatics to compact home machines, every product is engineered for consistency, speed, and flavor.</p>
-        <a href="products.html">See our lineup →</a>
-      </div>
-    </div>
-    <div class="card">
-      <img class="thumb" src="https://cdn.pixabay.com/photo/2021/09/07/10/11/coffee-beans-6603499_1280.jpg" alt="Service"/>
-      <div class="pad">
-        <div class="badge">Service</div>
-        <h3>Nationwide Support</h3>
-        <p>Install, train, and maintain with our certified technicians and proactive service plans that minimize downtime.</p>
-        <a href="customers.html">Read customer stories →</a>
-      </div>
-    </div>
-    <div class="card">
-      <img class="thumb" src="https://images.pexels.com/photos/6931054/pexels-photo-6931054.jpeg?cs=srgb&fm=jpg&w=1400" alt="Sustainability"/>
-      <div class="pad">
-        <div class="badge">Sustainability</div>
-        <h3>Ethical & Sustainable</h3>
-        <p>We prioritize responsible sourcing and energy‑efficient designs—better for your business and the planet.</p>
-        <a href="contact.html">Talk to us →</a>
-      </div>
-    </div>
+    <div class="card"><img class="thumb" src="https://images.pexels.com/photos/302899/pexels-photo-302899.jpeg?cs=srgb&fm=jpg&w=1600" alt="Commercial machines"/><div class="pad"><div class="badge">Portfolio</div><h3>Commercial & Consumer</h3><p>From café-grade super-automatics to compact home machines—engineered for consistency, speed, and flavor.</p><a href="products.html">See products →</a></div></div>
+    <div class="card"><img class="thumb" src="https://images.pexels.com/photos/6931054/pexels-photo-6931054.jpeg?cs=srgb&fm=jpg&w=1600" alt="Customer training"/><div class="pad"><div class="badge">Service</div><h3>Nationwide Support</h3><p>Install, train, and maintain with certified technicians and proactive service plans that reduce downtime.</p><a href="customers.html">Customer stories →</a></div></div>
+    <div class="card"><img class="thumb" src="https://images.pexels.com/photos/3404701/pexels-photo-3404701.jpeg?cs=srgb&fm=jpg&w=1600" alt="Sustainable sourcing"/><div class="pad"><div class="badge">Sustainability</div><h3>Responsible by design</h3><p>Energy‑efficient machines and ethically sourced beans—good for your business and the planet.</p><a href="contact.html">Talk to us →</a></div></div>
   </div>
 </div>
 
-  
-<div class="footer">
-  <div class="container">
-    <div style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
-      <div>© 2025 Contoso Coffee. All rights reserved.</div>
-      <div>Ethically sourced • Carbon neutral roasting • Global service network</div>
+  <div class="footer">
+    <div class="container">
+      <div style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
+        <div>© 2025 Contoso Coffee. All rights reserved.</div>
+        <div>Ethically sourced • Carbon-neutral roasting • Global service</div>
+      </div>
     </div>
   </div>
-</div>
-
-  <script>
-    console.log("Contoso Coffee site loaded");
-  </script>
 </body>
 </html>
