--- a/contact.html
+++ b/contact.html
@@ -8,57 +8,65 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml"/>
   <style>
 :root{
-  --bg:#0F0A08;
-  --surface:#1C1411;
-  --card:#241A16;
-  --text:#F4EDE8;
-  --muted:#CBBFBA;
-  --brand:#C08A59;
-  --accent:#7F5539;
+  --bg:#0f0a08;
+  --surface:#17110e;
+  --card:#211813;
+  --text:#f5efe9;
+  --muted:#cbbfba;
+  --brand:#c08a59;
+  --line:rgba(255,255,255,.08);
 }
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;color:var(--text);background:var(--bg);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;line-height:1.55}
+html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;line-height:1.55}
 a{color:var(--brand);text-decoration:none}
 a:hover{text-decoration:underline}
-.container{max-width:1100px;margin:0 auto;padding:0 20px}
-.nav{position:sticky;top:0;z-index:20;background:rgba(15,10,8,.8);backdrop-filter:saturate(120%) blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
-.nav .row{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
-.brand{display:flex;gap:12px;align-items:center}
-.brand img{height:32px}
-.menu{display:flex;gap:18px;align-items:center}
-.menu a{padding:8px 10px;border-radius:10px}
+.container{max-width:1180px;margin:0 auto;padding:0 22px}
+.nav{position:sticky;top:0;z-index:30;background:rgba(15,10,8,.75);backdrop-filter:blur(10px);border-bottom:1px solid var(--line)}
+.nav .row{display:flex;gap:16px;align-items:center;justify-content:space-between;padding:12px 0}
+.brand{display:flex;gap:10px;align-items:center}
+.brand img{height:34px}
+.menu{display:flex;gap:14px}
+.menu a{padding:8px 12px;border-radius:10px}
 .menu a.active,.menu a:hover{background:rgba(255,255,255,.06)}
 .hero{position:relative}
-.hero img{width:100%;height:54vh;object-fit:cover;border-bottom:1px solid rgba(255,255,255,.08);}
-.hero .overlay{position:absolute;inset:0;display:grid;place-items:center;text-align:center;background:linear-gradient(transparent,rgba(15,10,8,.4),rgba(15,10,8,.9))}
-h1{font-size:44px;margin:0 0 10px}
+.hero img{width:100%;height:56vh;object-fit:cover;border-bottom:1px solid var(--line)}
+.hero .overlay{position:absolute;inset:0;display:grid;place-items:center;text-align:center;background:linear-gradient(transparent,rgba(15,10,8,.35),rgba(15,10,8,.92))}
+h1{font-size:46px;margin:0 0 8px}
 .lead{font-size:18px;color:var(--muted);max-width:900px;margin:0 auto}
-.grid{display:grid;gap:20px}
-.cards{grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
-.card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:16px;overflow:hidden;box-shadow:0 8px 30px rgba(0,0,0,.25)}
-.card .thumb{aspect-ratio:16/9;background:#000;display:block;width:100%}
-.card .pad{padding:16px}
-.badge{display:inline-block;padding:4px 10px;border-radius:999px;background:rgba(192,138,89,.15);color:#e9cfb8;border:1px solid rgba(192,138,89,.35);font-size:12px}
-.footer{margin-top:64px;border-top:1px solid rgba(255,255,255,.06);padding:30px 0;color:var(--muted);background:var(--surface)}
 .section{padding:36px 0}
-.section h2{font-size:28px;margin:0 0 10px}
 .kicker{color:var(--brand);text-transform:uppercase;letter-spacing:.12em;font-size:12px;margin-bottom:6px}
-.product-group{margin:28px 0}
-.product-item{display:grid;grid-template-columns:160px 1fr;gap:16px;align-items:center;margin:12px 0;padding:14px;border:1px solid rgba(255,255,255,.06);border-radius:14px;background:rgba(255,255,255,.02)}
-.product-item img{width:160px;height:120px;object-fit:cover;border-radius:12px;background:#000}
-.table{width:100%;border-collapse:collapse;margin-top:10px}
-.table th,.table td{border-bottom:1px solid rgba(255,255,255,.08);padding:10px;text-align:left}
-.cta{display:inline-block;padding:12px 18px;border-radius:12px;background:var(--brand);color:#160E0B;font-weight:700;border:1px solid rgba(255,255,255,.12)}
-.cta:hover{filter:brightness(1.05)}
-form{display:grid;gap:12px;max-width:520px}
-input,select,textarea{background:#130D0A;color:var(--text);border:1px solid rgba(255,255,255,.08);padding:12px;border-radius:10px;font-size:15px}
+.grid{display:grid;gap:20px}
+.cards{grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+.card{background:var(--card);border:1px solid var(--line);border-radius:18px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.28)}
+.card .thumb{width:100%;aspect-ratio:16/9;object-fit:cover;display:block}
+.card .pad{padding:16px}
+.badge{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(192,138,89,.16);color:#efd9c4;border:1px solid rgba(192,138,89,.35);font-size:12px}
+.table{width:100%;border-collapse:collapse}
+.table th,.table td{border-bottom:1px solid var(--line);padding:8px;text-align:left}
+.cta{display:inline-block;padding:12px 16px;border-radius:12px;background:var(--brand);color:#160e0b;font-weight:800;border:1px solid var(--line)}
+.footer{margin-top:56px;border-top:1px solid var(--line);padding:28px 0;color:var(--muted);background:var(--surface)}
+/* Accordion (products) */
+.accordion-controls{display:flex;gap:10px;align-items:center;margin:8px 0 18px}
+.acc-btn{width:100%;text-align:left;display:flex;justify-content:space-between;align-items:center;padding:16px 18px;border-radius:14px;background:rgba(255,255,255,.04);border:1px solid var(--line);font-weight:800;font-size:17px;color:inherit;box-shadow:0 6px 20px rgba(0,0,0,.25)}
+.acc-btn:hover{background:rgba(255,255,255,.06)}
+.acc-btn .chev{transition:transform .18s ease}
+.acc-panel{display:none;padding:12px 0 4px}
+.acc-panel.open{display:block}
+/* Product internals */
+.product-meta{display:flex;gap:12px;flex-wrap:wrap;margin:8px 0}
+.pill{padding:6px 10px;border:1px solid var(--line);border-radius:999px;color:var(--muted);font-size:12px}
+.product-body{display:grid;grid-template-columns:1fr 1fr;gap:20px}
+.product-body h4{margin:0 0 6px 0}
+ul.feats{margin:8px 0 0 18px}
+.specs{width:100%;border-collapse:collapse}
+.specs th,.specs td{border-bottom:1px dashed var(--line);padding:8px 10px;text-align:left;font-size:14px}
+.specs th{width:42%;color:var(--muted);font-weight:600}
+.card-footer{display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap;margin-top:12px}
+.price{font-weight:800;font-size:16px}
+input,select,textarea{background:#130d0a;color:var(--text);border:1px solid var(--line);padding:12px;border-radius:10px;font-size:15px}
 button{all:unset}
 button.cta{cursor:pointer}
-.notice{padding:12px 14px;border:1px dashed rgba(255,255,255,.2);border-radius:10px;background:rgba(255,255,255,.03);font-size:14px;color:var(--muted)}
-@media (max-width:720px){
-  .product-item{grid-template-columns:1fr}
-  .hero img{height:40vh}
-}
+@media (max-width:860px){.product-body{grid-template-columns:1fr}.hero img{height:44vh}}
 </style>
 </head>
 <body>
@@ -71,13 +79,14 @@ button.cta{cursor:pointer}
     <nav class="menu"><a href="index.html" class="">Home</a><a href="products.html" class="">Products</a><a href="customers.html" class="">Customer Success</a><a href="contact.html" class="active">Contact</a></nav>
   </div>
 </div>
+
   
 <div class="container section">
-  <div class="kicker">Let’s talk</div>
+  <div class="kicker">Let's talk</div>
   <h2>Contact Us</h2>
-  <p class="lead">Have a question about machines, service, or beans? Tell us a bit about yourself and we’ll get back to you right away.</p>
-  
+  <p class="lead">Tell us about your needs. We’ll follow up within one business day.</p>
   <form id="contactForm" onsubmit="event.preventDefault(); handleSubmit();">
+    <div class="badge" style="margin:8px 0 12px 0">Submits to Power Automate → Dataverse Lead</div>
     <input type="text" name="firstName" placeholder="First name" required/>
     <input type="text" name="lastName" placeholder="Last name" required/>
     <input type="text" name="company" placeholder="Company name" required/>
@@ -94,104 +103,50 @@ button.cta{cursor:pointer}
     <button class="cta" type="submit">Send</button>
   </form>
 </div>
-
 <script>
-const FLOW_URL = "https://prod-XX.westus.logic.azure.com:443/workflows/REPLACE_WITH_YOUR_FLOW_TRIGGER_URL";
+  // Replace with your HTTP Request trigger URL from Power Automate
+  const FLOW_URL = "https://prod-XX.westus.logic.azure.com:443/workflows/REPLACE_WITH_YOUR_FLOW_TRIGGER_URL";
 
-async function handleSubmit(){
-  const form = document.getElementById('contactForm');
-  const data = Object.fromEntries(new FormData(form).entries());
-  const payload = {
-    firstName: data.firstName,
-    lastName: data.lastName,
-    company: data.company,
-    email: data.email,
-    interest: data.interest,
-    message: data.message || "",
-    source: "Contoso Coffee Website",
-    submittedUtc: new Date().toISOString()
-  };
-
-  try {
-    if (!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
-    const res = await fetch(FLOW_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
-    if (!res.ok) throw new Error("Flow returned " + res.status);
-    alert("Thanks! Your message was sent.");
-    form.reset();
-  } catch (e) {
-    console.warn("Falling back to file download:", e);
-    const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url;
-    const ts = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
-    a.download = 'contoso-contact-'+ts+'.json';
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    URL.revokeObjectURL(url);
-    alert('Saved your submission as a file. Replace FLOW_URL to send to Power Automate.');
+  async function handleSubmit(){
+    const form = document.getElementById('contactForm');
+    const data = Object.fromEntries(new FormData(form).entries());
+    const payload = {
+      firstName: data.firstName,
+      lastName: data.lastName,
+      company: data.company,
+      email: data.email,
+      interest: data.interest,
+      message: data.message || "",
+      source: "Contoso Coffee Website",
+      submittedUtc: new Date().toISOString()
+    };
+    try{
+      if(!FLOW_URL || FLOW_URL.includes("REPLACE_WITH_YOUR_FLOW_TRIGGER_URL")) throw new Error("No Flow URL set");
+      const res = await fetch(FLOW_URL, { method:"POST", headers:{ "Content-Type": "application/json" }, body: JSON.stringify(payload) });
+      if(!res.ok) throw new Error("Flow returned " + res.status);
+      alert("Thanks! Your message was sent.");
+      form.reset();
+    }catch(e){
+      console.warn("Falling back to local download:", e);
+      const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      const ts = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
+      a.download = 'contoso-contact-'+ts+'.json';
+      document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
+      alert("Saved your submission as a file. Set FLOW_URL to send to Power Automate.");
+    }
   }
-}
 </script>
 
-<div class="footer">
-  <div class="container">
-    <div style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
-      <div>© 2025 Contoso Coffee. All rights reserved.</div>
-      <div>Ethically sourced • Carbon neutral roasting • Global service network</div>
+  <div class="footer">
+    <div class="container">
+      <div style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
+        <div>© 2025 Contoso Coffee. All rights reserved.</div>
+        <div>Ethically sourced • Carbon-neutral roasting • Global service</div>
+      </div>
     </div>
   </div>
-</div>
-
-  
-<script>
-const FLOW_URL = "hhttps://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1";
-
-async function handleSubmit(){
-  const form = document.getElementById('contactForm');
-  const data = Object.fromEntries(new FormData(form).entries());
-  const payload = {
-    firstName: data.firstName,
-    lastName: data.lastName,
-    company: data.company,
-    email: data.email,
-    interest: data.interest,
-    message: data.message || "",
-    source: "Contoso Coffee Website",
-    submittedUtc: new Date().toISOString()
-  };
-
-  try {
-    if (!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
-    const res = await fetch(FLOW_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
-    if (!res.ok) throw new Error("Flow returned " + res.status);
-    alert("Thanks! Your message was sent.");
-    form.reset();
-  } catch (e) {
-    console.warn("Falling back to file download:", e);
-    const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url;
-    const ts = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
-    a.download = 'contoso-contact-'+ts+'.json';
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    URL.revokeObjectURL(url);
-    alert('Saved your submission as a file. Replace FLOW_URL to send to Power Automate.');
-  }
-}
-</script>
-
 </body>
 </html>
