--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Contact • Contoso Coffee</title>
-  <meta name="description" content="Contoso Coffee — commercial and consumer coffee solutions"/>
+  <meta name="description" content="Contact Contoso Coffee — commercial and consumer coffee solutions"/>
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml"/>
   <style>
 :root{
@@ -67,6 +67,18 @@ input,select,textarea{background:#130d0a;color:var(--text);border:1px solid var(
 button{all:unset}
 button.cta{cursor:pointer}
 @media (max-width:860px){.product-body{grid-template-columns:1fr}.hero img{height:44vh}}
+
+
+/* Contact form layout */
+.contact-wrap{max-width:840px;margin:0 auto}
+.form-card{background:var(--card);border:1px solid var(--line);border-radius:18px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.28)}
+.form-grid{display:grid;grid-template-columns:1fr 1fr;gap:14px}
+.field{display:flex;flex-direction:column;gap:6px}
+.field label{font-size:13px;color:var(--muted)}
+.field.full{grid-column:1 / -1}
+.form-actions{display:flex;justify-content:flex-end;margin-top:8px}
+.help{font-size:12px;color:var(--muted)}
+@media (max-width:720px){.form-grid{grid-template-columns:1fr}}
 </style>
 </head>
 <body>
@@ -80,73 +92,101 @@ button.cta{cursor:pointer}
   </div>
 </div>
 
-  
-<div class="container section">
+
+<div class="container section contact-wrap">
   <div class="kicker">Let's talk</div>
   <h2>Contact Us</h2>
   <p class="lead">Tell us about your needs. We’ll follow up within one business day.</p>
-  <form id="contactForm" onsubmit="event.preventDefault(); handleSubmit();">
-    <div class="badge" style="margin:8px 0 12px 0">Submits to Power Automate → Dataverse Lead</div>
-    <input type="text" name="firstName" placeholder="First name" required/>
-    <input type="text" name="lastName" placeholder="Last name" required/>
-    <input type="text" name="company" placeholder="Company name" required/>
-    <input type="email" name="email" placeholder="Email address" required/>
-    <select name="interest" required>
-      <option value="">Area of Interest</option>
-      <option>Commercial Machines</option>
-      <option>Consumer Machines</option>
-      <option>Beans & Subscriptions</option>
-      <option>Training & Service</option>
-      <option>Other</option>
-    </select>
-    <textarea name="message" rows="4" placeholder="How can we help?"></textarea>
-    <button class="cta" type="submit">Send</button>
-  </form>
-</div>
-<script>
-  // Replace with your HTTP Request trigger URL from Power Automate
-  const FLOW_URL = "https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1";
 
-  async function handleSubmit(){
-    const form = document.getElementById('contactForm');
-    const data = Object.fromEntries(new FormData(form).entries());
-    const payload = {
-      firstName: data.firstName,
-      lastName: data.lastName,
-      company: data.company,
-      email: data.email,
-      interest: data.interest,
-      message: data.message || "",
-      source: "Contoso Coffee Website",
-      submittedUtc: new Date().toISOString()
-    };
-    try{
-      if(!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
-      const res = await fetch(FLOW_URL, { method:"POST", headers:{ "Content-Type": "application/json" }, body: JSON.stringify(payload) });
-      if(!res.ok) throw new Error("Flow returned " + res.status);
-      alert("Thanks! Your message was sent.");
-      form.reset();
-    }catch(e){
-      console.warn("Falling back to local download:", e);
-      const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      const ts = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
-      a.download = 'contoso-contact-'+ts+'.json';
-      document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
-      alert("Saved your submission as a file. Set FLOW_URL to send to Power Automate.");
-    }
-  }
-</script>
+  <div class="form-card">
+    <div class="pad">
+      <div class="badge" style="margin:4px 0 12px 0">Submits to Power Automate → Dataverse Lead</div>
+      <form id="contactForm" onsubmit="event.preventDefault(); handleSubmit();">
+        <div class="form-grid">
+          <div class="field">
+            <label for="firstName">First name</label>
+            <input id="firstName" name="firstName" type="text" placeholder="First name" required/>
+          </div>
+          <div class="field">
+            <label for="lastName">Last name</label>
+            <input id="lastName" name="lastName" type="text" placeholder="Last name" required/>
+          </div>
+          <div class="field">
+            <label for="company">Company</label>
+            <input id="company" name="company" type="text" placeholder="Company name" required/>
+          </div>
+          <div class="field">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="Email address" required/>
+          </div>
+          <div class="field full">
+            <label for="interest">Area of interest</label>
+            <select id="interest" name="interest" required>
+              <option value="">Select an option</option>
+              <option>Commercial Machines</option>
+              <option>Consumer Machines</option>
+              <option>Beans & Subscriptions</option>
+              <option>Training & Service</option>
+              <option>Other</option>
+            </select>
+            <div class="help">Pick the closest fit — we’ll route to the right specialist.</div>
+          </div>
+          <div class="field full">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="4" placeholder="How can we help?"></textarea>
+          </div>
+        </div>
+        <div class="form-actions">
+          <button class="cta" type="submit">Send</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
   <div class="footer">
     <div class="container">
       <div style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
         <div>© 2025 Contoso Coffee. All rights reserved.</div>
-        <div>Ethically sourced • Carbon-neutral roasting • Global service</div>
+        <div>Ethically sourced • Carbon neutral roasting • Global service network</div>
       </div>
     </div>
   </div>
+  <script>
+    // Replace with your HTTP Request trigger URL from Power Automate
+    const FLOW_URL = "https://prod-XX.westus.logic.azure.com:443/workflows/REPLACE_WITH_YOUR_FLOW_TRIGGER_URL";
+
+    async function handleSubmit(){
+      const form = document.getElementById('contactForm');
+      const data = Object.fromEntries(new FormData(form).entries());
+      const payload = {
+        firstName: data.firstName,
+        lastName: data.lastName,
+        company: data.company,
+        email: data.email,
+        interest: data.interest,
+        message: data.message || "",
+        source: "Contoso Coffee Website",
+        submittedUtc: new Date().toISOString()
+      };
+      try{
+        if(!FLOW_URL || FLOW_URL.includes("REPLACE_WITH_YOUR_FLOW_TRIGGER_URL")) throw new Error("No Flow URL set");
+        const res = await fetch(FLOW_URL, { method:"POST", headers:{ "Content-Type": "application/json" }, body: JSON.stringify(payload) });
+        if(!res.ok) throw new Error("Flow returned " + res.status);
+        alert("Thanks! Your message was sent.");
+        form.reset();
+      }catch(e){
+        console.warn("Falling back to local download:", e);
+        const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        const ts = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
+        a.download = 'contoso-contact-'+ts+'.json';
+        document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
+        alert("Saved your submission as a file. Set FLOW_URL to send to Power Automate.");
+      }
+    }
+  </script>
 </body>
 </html>
