--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@ button.cta{cursor:pointer}
   </div>
   <script>
     // Replace with your HTTP Request trigger URL from Power Automate
-    const FLOW_URL = "https://prod-XX.westus.logic.azure.com:443/workflows/REPLACE_WITH_YOUR_FLOW_TRIGGER_URL";
+    const FLOW_URL = "https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1";
 
     async function handleSubmit(){
       const form = document.getElementById('contactForm');
@@ -170,7 +170,7 @@ button.cta{cursor:pointer}
         submittedUtc: new Date().toISOString()
       };
       try{
-        if(!FLOW_URL || FLOW_URL.includes("REPLACE_WITH_YOUR_FLOW_TRIGGER_URL")) throw new Error("No Flow URL set");
+        if(!FLOW_URL || FLOW_URL.includes("https://e8f70a479a6de7fa8e5f200b78db5b.16.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/e3568631792e4c5ebd373d303d45dc65/triggers/manual/paths/invoke/?api-version=1")) throw new Error("No Flow URL set");
         const res = await fetch(FLOW_URL, { method:"POST", headers:{ "Content-Type": "application/json" }, body: JSON.stringify(payload) });
         if(!res.ok) throw new Error("Flow returned " + res.status);
         alert("Thanks! Your message was sent.");
